# decipher

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  TODO.md  TOOLS.md  pyproject.toml  setup.py
docs/: agent_loop_milestone2_comparison.md  agent_loop_redesign_plan.md  automated_tool_comparison.md  borg_0109v_case_state.md  copiale_generalization_plan.md  frontier_solver_comparison.md  polyalphabetic_capability_plan.md  prompt_reduction_strategy.md  real_english_challenge_packet.md  test_inventory.md  transform_optimization_test_plan.md  transposition_homophonic_capability.md  unknown_cipher_agent_plan.md
external_baselines/: README.md  __init__.py  examples.json  harness.py  zenith_only.json
frontier/: agent_model_eval_0109v.jsonl  agentic_milestone4_smoke.jsonl  automated_solver_frontier.jsonl  english_model_comparison.jsonl  english_model_eval.jsonl  homophonic_profile_ablation.jsonl  polyalphabetic_ladder.jsonl  pure_transposition_ladder.jsonl  real_english_challenge.jsonl  transposition_homophonic_ladder.jsonl  zodiac340_known_replay.jsonl
models/: ngram5_de.bin.metadata.json  ngram5_de_500.bin.metadata.json  ngram5_en.bin.metadata.json  ngram5_en_mixed.bin.metadata.json  ngram5_en_parity.bin.metadata.json  ngram5_fr.bin.metadata.json  ngram5_fr_500.bin.metadata.json  ngram5_it.bin.metadata.json  ngram5_it_500.bin.metadata.json  ngram5_la.bin.metadata.json  ngram5_la_500.bin.metadata.json
rust/decipher_fast/: Cargo.toml  pyproject.toml
rust/decipher_fast/src/: lib.rs
scripts/: analyze_agent_artifact.py  build_frontier_report.py  build_parity_dashboard.py  build_rust_fast.sh  count_prompt_tokens.py  generate_synthetic_benchmark.py  nominate_frontier_cases.py  report_finalist_validation.py  run_agent_model_packet.py  run_automated_parity_matrix.py  run_external_baselines.py  run_frontier_suite.py  run_testgen_suite.py  setup_dev.sh  validate_benchmark.py
src/: app.py  cli.py
tests/: test_agent_display.py  test_agent_reliability.py  test_agent_resume.py  test_analysis.py  test_artifact_analyzer.py  test_automated_parity_matrix.py  test_automated_runner.py  test_benchmark.py  test_benchmark_validator.py  test_cipher_id.py  test_cipher_transformers.py  test_ciphers.py  test_corpus_builder.py  test_external_baselines.py  test_final_summary.py  test_finalist_validation.py  test_finalist_validation_report.py  test_frontier_suite.py  test_homophonic_anneal.py  test_milestone4_smoke.py  test_models.py  test_segment.py  (+9 more)
(+122 files in other folders)
