[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decipher"
version = "0.1.0"
description = "Classical cipher cryptanalysis tool with AI-powered cracking"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "keyring>=25",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
decipher = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
