[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decipher"
version = "0.1.0"
description = "Classical cipher cryptanalysis tool with AI-powered cracking"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "anthropic>=0.40",
    "keyring>=25",
    "numpy>=1.26",
    "Pillow>=10",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
providers = [
    "openai>=1.0",
    "google-genai>=1.0",
]

[project.scripts]
decipher = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:pytest-qt"]

[tool.setuptools.packages.find]
where = ["src"]
